--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
+    "PMIO": "github:processmaker/pmio-sdk-javascript",
     "dagre": "^0.7.4",
     "graphlib": "^2.1.1",
     "jointjs": "^1.1.0",
