--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dagre": "^0.7.4",
     "graphlib": "^2.1.1",
     "jointjs": "^1.1.0",
+    "npm-watch": "^0.3.0",
     "vue-codemirror": "^3.1.8",
     "vue-material": "^1.0.0-beta-7"
   }
