--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "PMIO": "github:processmaker/pmio-sdk-javascript",
+    "cleanup-dependencies": "0.0.6",
     "dagre": "^0.7.4",
     "graphlib": "^2.1.1",
     "jointjs": "^1.1.0",
