--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.9",
+    "dagre": "^0.8.2",
+    "graphlib": "^2.1.5",
+    "jointjs": "^2.1.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.7",
