--- a/package.json
+++ b/package.json
@@ -13,15 +13,27 @@
     "axios": "^0.16.2",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
+    "css-loader": "^0.28.11",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.11",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
-    "vue": "^2.5.16"
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "vue": "^2.5.16",
+    "vue-loader": "^15.0.9",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-middleware": "^3.1.3"
   },
   "dependencies": {
     "PMIO": "github:processmaker/pmio-sdk-javascript",
     "dagre": "^0.7.4",
     "graphlib": "^2.1.1",
     "jointjs": "^1.1.0",
-    "vue-codemirror": "^3.1.8"
+    "vue-codemirror": "^3.1.8",
+    "vue-material": "^1.0.0-beta-7"
   }
 }
