--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "dev": "node src/dev-server.js"
- },
+  },
   "devDependencies": {
     "axios": "^0.16.2",
-    "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
-    "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
@@ -26,10 +24,10 @@
   },
   "dependencies": {
     "PMIO": "github:processmaker/pmio-sdk-javascript",
+    "bootstrap-vue": "^2.0.0-rc.9",
     "dagre": "^0.7.4",
-    "graphlib": "^2.1.1",
+    "graphlib": "^2.1.5",
     "jointjs": "^1.1.0",
-    "vue-codemirror": "^3.1.8",
-    "vue-material": "^1.0.0-beta-7"
+    "vue-codemirror": "^3.1.8"
   }
 }
