--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "node src/dev-server.js"
   },
   "devDependencies": {
+    "@fortawesome/vue-fontawesome": "0.0.22",
     "axios": "^0.16.2",
+    "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
@@ -23,6 +25,8 @@
     "webpack-dev-middleware": "^3.1.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "PMIO": "github:processmaker/pmio-sdk-javascript",
     "bootstrap-vue": "^2.0.0-rc.9",
     "dagre": "^0.7.4",
